log
Fri Mar 18 14:38:28 UTC 2022: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
bb4dc87
Fri Mar 18 14:40:32 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7d23a75
Fri Mar 18 14:41:51 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
318b6d4
Fri Mar 18 14:45:06 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:45:34: error: ‘list->current’ is a pointer; did you mean to use ‘->’?
     list->current = list->current.next;
                                  ^
                                  ->
Compilation failed
493c1e9
Fri Mar 18 14:45:15 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b4b126d
Fri Mar 18 14:46:40 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
336e7fc
